--- a/templates/Expert.html
+++ b/templates/Expert.html
@@ -69,24 +69,24 @@ $.ajax({
 						for(i=0;i<result.page.length;i++){
 							block='<li><h5>'+result.page[i][4]+'号专家评审订单</h5><p>评审时间：'+result.page[i][3]+'，专家人数：'+result.page[i][2]+'，价格：'+result.page[i][1]+'，专家类别：'+result.page[i][0]+'</p><div class="progress-linear-wrap"><article class="progress-linear"><div class="progress-header">';
 							if(result.page[i][5]==0){
-								block = block+'<p>订单执行百分比</p><span class="progress-value">0</span>';
+								block = block+'<p>订单执行百分比</p><span class="progress-value">0</span></div><div class="progress-bar-linear-wrap"><div class="progress-bar-linear" style="width:0%;">';
 							}else if(result.page[i][6]==0){
-								block = block+'<p>订单执行百分比</p><span class="progress-value">33</span>';
+								block = block+'<p>订单执行百分比</p><span class="progress-value">33</span></div><div class="progress-bar-linear-wrap"><div class="progress-bar-linear" style="width:33%;">';
 							}else if(result.page[i][7]==0){
-								block = block+'<p>订单执行百分比</p><span class="progress-value">66</span>';
+								block = block+'<p>订单执行百分比</p><span class="progress-value">66</span></div><div class="progress-bar-linear-wrap"><div class="progress-bar-linear" style="width:66%;">';
 							}else if(result.page[i][5]==1 && result.page[i][6]==1 && result.page[i][7]==1){
 								block = block+'<p>接单用户：'+result.page[i][9]+'</p>';
-								block = block+ '<p>订单执行百分比</p><span class="progress-value">100</span>';
+								block = block+ '<p>订单执行百分比</p><span class="progress-value">100</span></div><div class="progress-bar-linear-wrap"><div class="progress-bar-linear" style="width:100%;">';
 								
 							}
 							else{
 								block = block+'<p>error</p>';
 							}
-							block=block+'</div><div class="progress-bar-linear-wrap"><div class="progress-bar-linear"></div></div><form id='+result.page[i][4]+' onsubmit="return false" class="rd-form rd-mailform" data-form-output="form-output-global" data-form-type="contact" method="post"><input class="form-input" id="hidden" type="hidden" name="formId" value="'+result.page[i][4]+'"><textarea rows="2" cols="100" name="report-content" form='+result.page[i][4]+'  placeholder="输入评审报告内容..."></textarea><br>合格<input type="radio" checked="checked" name="qualification" value=1 />不合格<input type="radio" name="qualification" value=0 /><br><input type="hidden" class="button button-secondary" name="submit" value="提交报告"><input type="submit" class="button button-secondary" name="submit" value="提交报告" onclick="submitForm4('+result.page[i][4]+')"></form>';
+							block=block+'</div></div><form id='+result.page[i][4]+' onsubmit="return false" class="rd-form rd-mailform" data-form-output="form-output-global" data-form-type="contact" method="post"><input class="form-input" id="hidden" type="hidden" name="formId" value="'+result.page[i][4]+'"><textarea rows="2" cols="100" name="report-content" form='+result.page[i][4]+'  placeholder="输入评审报告内容..."></textarea><br>合格<input type="radio" checked="checked" name="qualification" value=1 />不合格<input type="radio" name="qualification" value=0 /><br><input type="hidden" class="button button-secondary" name="submit" value="提交报告"><input type="submit" class="button button-secondary" name="submit" value="提交报告" onclick="submitForm4('+result.page[i][4]+')"></form>';
 							
 							
 							<!-- console.log(result.page[i][6]); -->
-							text1=text1+"<br>"+block;
+							text1=text1+block+"<br>";
 						}
 						
 						console.log("评审");
@@ -104,24 +104,24 @@ $.ajax({
 						for(i=0;i<result.page2.length;i++){
 							block='<li><h5>'+result.page2[i][4]+'号专家评审订单</h5><p>评审时间：'+result.page2[i][3]+'，专家人数：'+result.page2[i][2]+'，价格：'+result.page2[i][1]+'，专家类别：'+result.page2[i][0]+'</p><div class="progress-linear-wrap"><article class="progress-linear"><div class="progress-header">';
 							if(result.page2[i][5]==0){
-								block = block+'<p>订单执行百分比</p><span class="progress-value">0</span>';
+								block = block+'<p>订单执行百分比</p><span class="progress-value">0</span></div><div class="progress-bar-linear-wrap"><div class="progress-bar-linear" style="width:0%;">';
 							}else if(result.page2[i][6]==0){
-								block = block+'<p>订单执行百分比</p><span class="progress-value">33</span>';
+								block = block+'<p>订单执行百分比</p><span class="progress-value">33</span></div><div class="progress-bar-linear-wrap"><div class="progress-bar-linear" style="width:33%;">';
 							}else if(result.page2[i][7]==0){
-								block = block+'<p>订单执行百分比</p><span class="progress-value">66</span>';
+								block = block+'<p>订单执行百分比</p><span class="progress-value">66</span></div><div class="progress-bar-linear-wrap"><div class="progress-bar-linear" style="width:66%;">';
 							}else if(result.page2[i][5]==1 && result.page2[i][6]==1 && result.page2[i][7]==1){
 								block = block+'<p>接单用户：'+result.page2[i][9]+'</p>';
-								block = block+ '<p>订单执行百分比</p><span class="progress-value">100</span>';
+								block = block+ '<p>订单执行百分比</p><span class="progress-value">100</span></div><div class="progress-bar-linear-wrap"><div class="progress-bar-linear" style="width:100%;">';
 								
 							}
 							else{
 								block = block+'<p>error</p>';
 							}
-							block=block+'</div><div class="progress-bar-linear-wrap"><div class="progress-bar-linear"></div></div><form class="rd-form rd-mailform" data-form-output="form-output-global" data-form-type="contact" method="post" ><input type="button" class="button button-secondary" name="submit" value="接单" onclick="javascript:take('+result.page2[i][4]+')"></form>';
+							block=block+'</div></div><form class="rd-form rd-mailform" data-form-output="form-output-global" data-form-type="contact" method="post" ><input type="button" class="button button-secondary" name="submit" value="接单" onclick="javascript:take('+result.page2[i][4]+')"></form>';
 							
 							
 							<!-- console.log(result.page2[i][6]); -->
-							text1=text1+"<br>"+block;
+							text1=text1+block+"<br>";
 						}
 						
 						console.log("评审");
@@ -173,24 +173,24 @@ var formId='#'+formid
 						for(i=0;i<result.page.length;i++){
 							block='<li><h5>'+result.page[i][4]+'号专家评审订单</h5><p>评审时间：'+result.page[i][3]+'，专家人数：'+result.page[i][2]+'，价格：'+result.page[i][1]+'，专家类别：'+result.page[i][0]+'</p><div class="progress-linear-wrap"><article class="progress-linear"><div class="progress-header">';
 							if(result.page[i][5]==0){
-								block = block+'<p>订单执行百分比</p><span class="progress-value">0</span>';
+								block = block+'<p>订单执行百分比</p><span class="progress-value">0</span></div><div class="progress-bar-linear-wrap"><div class="progress-bar-linear" style="width:0%;">';
 							}else if(result.page[i][6]==0){
-								block = block+'<p>订单执行百分比</p><span class="progress-value">33</span>';
+								block = block+'<p>订单执行百分比</p><span class="progress-value">33</span></div><div class="progress-bar-linear-wrap"><div class="progress-bar-linear" style="width:33%;">';
 							}else if(result.page[i][7]==0){
-								block = block+'<p>订单执行百分比</p><span class="progress-value">66</span>';
+								block = block+'<p>订单执行百分比</p><span class="progress-value">66</span></div><div class="progress-bar-linear-wrap"><div class="progress-bar-linear" style="width:66%;">';
 							}else if(result.page[i][5]==1 && result.page[i][6]==1 && result.page[i][7]==1){
 								block = block+'<p>接单用户：'+result.page[i][9]+'</p>';
-								block = block+ '<p>订单执行百分比</p><span class="progress-value">100</span>';
+								block = block+ '<p>订单执行百分比</p><span class="progress-value">100</span></div><div class="progress-bar-linear-wrap"><div class="progress-bar-linear" style="width:100%;">';
 								
 							}
 							else{
 								block = block+'<p>error</p>';
 							}
-							block=block+'</div><div class="progress-bar-linear-wrap"><div class="progress-bar-linear"></div></div><form id='+result.page[i][4]+' onsubmit="return false" class="rd-form rd-mailform" data-form-output="form-output-global" data-form-type="contact" method="post"><input class="form-input" id="hidden" type="hidden" name="formId" value="'+result.page[i][4]+'"><textarea rows="2" cols="100" name="report-content" form="report"  placeholder="输入评审报告内容..."></textarea><br>合格<input type="radio" checked="checked" name="qualification" value=1 />不合格<input type="radio" name="qualification" value=0 /><br><input type="hidden" class="button button-secondary" name="submit" value="提交报告"><input type="submit" class="button button-secondary" name="submit" value="提交报告" onclick="submitForm4('+result.page[i][4]+')"></form>';
+							block=block+'</div></div><form id='+result.page[i][4]+' onsubmit="return false" class="rd-form rd-mailform" data-form-output="form-output-global" data-form-type="contact" method="post"><input class="form-input" id="hidden" type="hidden" name="formId" value="'+result.page[i][4]+'"><textarea rows="2" cols="100" name="report-content" form='+result.page[i][4]+'  placeholder="输入评审报告内容..."></textarea><br>合格<input type="radio" checked="checked" name="qualification" value=1 />不合格<input type="radio" name="qualification" value=0 /><br><input type="hidden" class="button button-secondary" name="submit" value="提交报告"><input type="submit" class="button button-secondary" name="submit" value="提交报告" onclick="submitForm4('+result.page[i][4]+')"></form>';
 							
 							
 							<!-- console.log(result.page[i][6]); -->
-							text1=text1+"<br>"+block;
+							text1=text1+block+"<br>";
 						}
 						
 						console.log("评审");
@@ -208,20 +208,20 @@ var formId='#'+formid
 						for(i=0;i<result.page3.length;i++){
 							block='<li><h5>'+result.page3[i][4]+'号专家评审订单</h5><p>评审时间：'+result.page3[i][3]+'，专家人数：'+result.page3[i][2]+'，价格：'+result.page3[i][1]+'，专家类别：'+result.page3[i][0]+'</p><div class="progress-linear-wrap"><article class="progress-linear"><div class="progress-header">';
 							if(result.page3[i][5]==0){
-								block = block+'<p>订单执行百分比</p><span class="progress-value">0</span>';
+								block = block+'<p>订单执行百分比</p><span class="progress-value">0</span></div><div class="progress-bar-linear-wrap"><div class="progress-bar-linear" style="width:0%;">';
 							}else if(result.page3[i][6]==0){
-								block = block+'<p>订单执行百分比</p><span class="progress-value">33</span>';
+								block = block+'<p>订单执行百分比</p><span class="progress-value">33</span></div><div class="progress-bar-linear-wrap"><div class="progress-bar-linear" style="width:33%;">';
 							}else if(result.page3[i][7]==0){
-								block = block+'<p>订单执行百分比</p><span class="progress-value">66</span>';
+								block = block+'<p>订单执行百分比</p><span class="progress-value">66</span></div><div class="progress-bar-linear-wrap"><div class="progress-bar-linear" style="width:66%;">';
 							}else if(result.page3[i][5]==1 && result.page3[i][6]==1 && result.page3[i][7]==1){
 								block = block+'<p>接单用户：'+result.page3[i][9]+'</p>';
-								block = block+ '<p>订单执行百分比</p><span class="progress-value">100</span>';
+								block = block+ '<p>订单执行百分比</p><span class="progress-value">100</span></div><div class="progress-bar-linear-wrap"><div class="progress-bar-linear" style="width:100%;">';
 								
 							}
 							else{
 								block = block+'<p>error</p>';
 							}
-							block=block+'</div><div class="progress-bar-linear-wrap"><div class="progress-bar-linear"></div></div>';
+							block=block+'</div></div>';
 							
 							
 							<!-- console.log(result.page3[i][6]); -->
@@ -757,5 +757,7 @@ var formId='#'+formid
     <!-- Javascript-->
     <script src={%static "js/core.min.js"%}></script>
     <script src={%static "js/script.js"%}></script>
+	<script src={%static "js/jquery.mousewheel.min.js"%}></script>
+
   </body>
 </html>
