--- a/templates/news.html
+++ b/templates/news.html
@@ -256,7 +256,8 @@ window.onload=loadXMLDoc1()
 				
 				<div class="group-sm buttons-group-1"><a class="button button-icon button-icon-left button-round button-facebook" href="#"><span class="icon mdi mdi-facebook"></span><span>Share on Facebook</span></a><a class="button button-icon button-icon-left button-round button-twitter" href="#"><span class="icon mdi mdi-twitter"></span><span>Share on Twitter</span></a></div>
                 </div>
-                <div class="post-item">
+				
+                {% comment %} <div class="post-item">
                   <h2>评论区</h2>
                   <ul class="comment-list">
                     <li>
@@ -326,7 +327,7 @@ window.onload=loadXMLDoc1()
                       </div>
                     </div>
                   </form> -->
-                </div>
+                </div> {% endcomment %}
               </div>
             </div>
           </div>
