--- a/templates/login.html
+++ b/templates/login.html
@@ -53,7 +53,7 @@
                       </li>
 					  <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'main:main'%}">用户主页</a>
                       </li>
-                      <li class="rd-nav-item active"><a class="rd-nav-link" href="{%url 'main:gov'%}">政府主页</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'main:gov'%}">政府主页</a>
 					  </li>
 					  <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'main:thirdParty'%}">第三方主页</a>
 					  </li>
@@ -64,7 +64,7 @@
 					  
 					  
 					  
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="{%url 'login:login'%}">登录</a>
+                      <li class="rd-nav-item active"><a class="rd-nav-link" href="{%url 'login:login'%}">登录</a>
 					  <!-- RD Navbar Dropdown-->
                         <ul class="rd-menu rd-navbar-dropdown">
                           <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="{%url 'login:logout'%}">退出登录</a></li>
